@@ -38,7 +38,7 @@
 #endif
 
 /*
- * The following structure keeps track of whether we are using the 
+ * The following structure keeps track of whether we are using the
  * multi-byte or the wide-character interfaces to the operating system.
  * System calls should be made through the following function table.
  */
@@ -55,10 +55,10 @@ typedef struct TclWinProcs {
     TCHAR *(WINAPI *charLowerProc)(TCHAR *);
     BOOL (WINAPI *copyFileProc)(const TCHAR *, const TCHAR *, BOOL);
     BOOL (WINAPI *createDirectoryProc)(const TCHAR *, LPSECURITY_ATTRIBUTES);
-    HANDLE (WINAPI *createFileProc)(const TCHAR *, DWORD, DWORD, 
+    HANDLE (WINAPI *createFileProc)(const TCHAR *, DWORD, DWORD,
 	    LPSECURITY_ATTRIBUTES, DWORD, DWORD, HANDLE);
-    BOOL (WINAPI *createProcessProc)(const TCHAR *, TCHAR *, 
-	    LPSECURITY_ATTRIBUTES, LPSECURITY_ATTRIBUTES, BOOL, DWORD, 
+    BOOL (WINAPI *createProcessProc)(const TCHAR *, TCHAR *,
+	    LPSECURITY_ATTRIBUTES, LPSECURITY_ATTRIBUTES, BOOL, DWORD,
 	    LPVOID, const TCHAR *, LPSTARTUPINFOA, LPPROCESS_INFORMATION);
     BOOL (WINAPI *deleteFileProc)(const TCHAR *);
     HANDLE (WINAPI *findFirstFileProc)(const TCHAR *, WIN32_FIND_DATAT *);
@@ -66,35 +66,35 @@ typedef struct TclWinProcs {
     BOOL (WINAPI *getComputerNameProc)(WCHAR *, LPDWORD);
     DWORD (WINAPI *getCurrentDirectoryProc)(DWORD, WCHAR *);
     DWORD (WINAPI *getFileAttributesProc)(const TCHAR *);
-    DWORD (WINAPI *getFullPathNameProc)(const TCHAR *, DWORD nBufferLength, 
+    DWORD (WINAPI *getFullPathNameProc)(const TCHAR *, DWORD nBufferLength,
 	    WCHAR *, TCHAR **);
     DWORD (WINAPI *getModuleFileNameProc)(HMODULE, WCHAR *, int);
-    DWORD (WINAPI *getShortPathNameProc)(const TCHAR *, WCHAR *, DWORD); 
-    UINT (WINAPI *getTempFileNameProc)(const TCHAR *, const TCHAR *, UINT, 
+    DWORD (WINAPI *getShortPathNameProc)(const TCHAR *, WCHAR *, DWORD);
+    UINT (WINAPI *getTempFileNameProc)(const TCHAR *, const TCHAR *, UINT,
 	    WCHAR *);
     DWORD (WINAPI *getTempPathProc)(DWORD, WCHAR *);
-    BOOL (WINAPI *getVolumeInformationProc)(const TCHAR *, WCHAR *, DWORD, 
+    BOOL (WINAPI *getVolumeInformationProc)(const TCHAR *, WCHAR *, DWORD,
 	    LPDWORD, LPDWORD, LPDWORD, WCHAR *, DWORD);
     HINSTANCE (WINAPI *loadLibraryProc)(const TCHAR *);
     TCHAR (WINAPI *lstrcpyProc)(WCHAR *, const TCHAR *);
     BOOL (WINAPI *moveFileProc)(const TCHAR *, const TCHAR *);
     BOOL (WINAPI *removeDirectoryProc)(const TCHAR *);
-    DWORD (WINAPI *searchPathProc)(const TCHAR *, const TCHAR *, 
+    DWORD (WINAPI *searchPathProc)(const TCHAR *, const TCHAR *,
 	    const TCHAR *, DWORD, WCHAR *, TCHAR **);
     BOOL (WINAPI *setCurrentDirectoryProc)(const TCHAR *);
     BOOL (WINAPI *setFileAttributesProc)(const TCHAR *, DWORD);
-    /* 
+    /*
      * These two function pointers will only be set when
      * Tcl_FindExecutable is called.  If you don't ever call that
      * function, the application will crash whenever WinTcl tries to call
      * functions through these null pointers.  That is not a bug in Tcl
      * -- Tcl_FindExecutable is obligatory in recent Tcl releases.
      */
-    BOOL (WINAPI *getFileAttributesExProc)(const TCHAR *, 
+    BOOL (WINAPI *getFileAttributesExProc)(const TCHAR *,
 	    GET_FILEEX_INFO_LEVELS, LPVOID);
-    BOOL (WINAPI *createHardLinkProc)(const TCHAR*, const TCHAR*, 
+    BOOL (WINAPI *createHardLinkProc)(const TCHAR*, const TCHAR*,
 				      LPSECURITY_ATTRIBUTES);
-    
+
     /* deleted INT (__cdecl *utimeProc)(const TCHAR*, struct _utimbuf *); */
     /* These two are also NULL at start; see comment above */
     HANDLE (WINAPI *findFirstFileExProc)(const TCHAR*, UINT,
@@ -102,7 +102,7 @@ typedef struct TclWinProcs {
 					 LPVOID, DWORD);
     BOOL (WINAPI *getVolumeNameForVMPProc)(const TCHAR*, TCHAR*, DWORD);
     DWORD (WINAPI *getLongPathNameProc)(const TCHAR*, TCHAR*, DWORD);
-    /* 
+    /*
      * These six are for the security sdk to get correct file
      * permissions on NT, 2000, XP, etc.  On 95,98,ME they are
      * always null.
@@ -110,9 +110,9 @@ typedef struct TclWinProcs {
     BOOL (WINAPI *getFileSecurityProc)(LPCTSTR lpFileName,
 		     SECURITY_INFORMATION RequestedInformation,
 		     PSECURITY_DESCRIPTOR pSecurityDescriptor,
-		     DWORD nLength, 
+		     DWORD nLength,
 		     LPDWORD lpnLengthNeeded);
-    BOOL (WINAPI *impersonateSelfProc) (SECURITY_IMPERSONATION_LEVEL 
+    BOOL (WINAPI *impersonateSelfProc) (SECURITY_IMPERSONATION_LEVEL
 		      ImpersonationLevel);
     BOOL (WINAPI *openThreadTokenProc) (HANDLE ThreadHandle,
 		      DWORD DesiredAccess, BOOL OpenAsSelf,
@@ -165,12 +165,11 @@ MODULE_SCOPE Tcl_Channel TclWinOpenFileChannel(HANDLE handle, char *channelName,
 			    int permissions, int appendMode);
 MODULE_SCOPE Tcl_Channel TclWinOpenSerialChannel(HANDLE handle,
 			    char *channelName, int permissions);
-MODULE_SCOPE void	TclWinResetInterfaceEncodings();
 MODULE_SCOPE HANDLE	TclWinSerialReopen(HANDLE handle, const TCHAR *name,
 			    DWORD access);
 MODULE_SCOPE int	TclWinSymLinkCopyDirectory(const TCHAR* LinkOriginal,
 			    const TCHAR* LinkCopy);
-MODULE_SCOPE int	TclWinSymLinkDelete(const TCHAR* LinkOriginal, 
+MODULE_SCOPE int	TclWinSymLinkDelete(const TCHAR* LinkOriginal,
 			    int linkOnly);
 #if defined(TCL_THREADS) && defined(USE_THREAD_ALLOC)
 MODULE_SCOPE void	TclWinFreeAllocCache(void);
