@@ -1,3 +1,11 @@
+2009-08-02  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tclWin32Dll.c   eliminate TclWinResetInterfaceEncodings, because
+	* win/tclWinInit.c    it does exactly the same as TclWinEncodingsCleanup,
+	* win/tclWinInt.h     make sure that tclWinProcs and tclWinTCharEncoding
+	                      are always set and reset concurrently.
+	* win/tclWinFCmd.c:   correct check for win95
+
 2009-07-31  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStringObj.c:	Corrected failure to grow buffer
